kubernetes/gym-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.gym.service: gym-app
  name: gym-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.gym.service: gym-app
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.gym.network/app-network: "true"
        io.gym.service: gym-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: gin-app
          image: registry.gitlab.com/gym-global/backend/gym:v1
          ports:
            - containerPort: 6000
          resources: {}
          imagePullPolicy: "Always"
      restartPolicy: Always
status: {}
