kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    io.gym.service: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.gym.service: postgres
  template:
    metadata:
      labels:
        io.gym.service: postgres
        io.gym.network/app-network: "true"
    spec:
      containers:
        - name: postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      restartPolicy: Always
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
