kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.gym.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.gym.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        io.gym.service: redis
        io.gym.network/app-network: "true"
    spec:
      containers:
        - args:
            - redis-server
#            - --requirepass
#            - nNS&B
          image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
