kubernetes/gym-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.gym.service: gym-app
  name: gym-app
spec:
  ports:
    - name: "6000"
      port: 6000
      targetPort: 6000
  selector:
    io.gym.service: gym.app
status:
  loadBalancer: {}
