kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    io.gym.service: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    io.gym.service: postgres
status:
  loadBalancer: {}
