kubernetes/gym-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.gym.network/app-network: "true"
  podSelector:
    matchLabels:
      io.gym.network/app-network: "true"
